--- a/pages/profile.html
+++ b/pages/profile.html
@@ -73,7 +73,7 @@
                         <h3 class="font-medium text-black mt-2 ">tropwet</h3>
                         <p class="text-xs">he fucks the two girls and they cum in her mouth she eats the</p>
                         <div class="flex items-center mt-3 gap-x-2">
-                            <iconify-icon icon="ri:women-line" class="text-lg text-orange"></iconify-icon>
+                            <iconify-icon icon="ri:women-line" class="text-lg text-gay"></iconify-icon>
                             <span class="text-xs">21 ans</span>
                             <iconify-icon icon="twemoji:flag-colombia" class="text-lg"></iconify-icon>
                         </div>
@@ -96,7 +96,7 @@
 
                     <span class="flex items-center mt-10">
                         <iconify-icon icon="fluent:people-community-16-filled"
-                            class="text-sm mr-1 text-[#DB324D]"></iconify-icon>
+                            class="text-sm mr-1 text-gay"></iconify-icon>
                         178 359 Followers
                     </span>
                 </div>
@@ -121,7 +121,7 @@
                     </button>
 
                     <span id="active-bar"
-                        class="absolute bottom-0 left-0 h-[3px] bg-red-500 rounded transition-all duration-300 w-20"></span>
+                        class="absolute bottom-0 left-0 h-[3px] bg-gay rounded transition-all duration-300 w-20"></span>
                 </div>
 
                 <!-- Tabs Content -->
