--- a/pages/profile.html
+++ b/pages/profile.html
@@ -70,7 +70,7 @@
                     <img src="./../images/avatar.jpg" alt="avatar image" class="h-20 w-20 rounded-full object-cover">
                     <div class="">
 
-                        <h3 class="font-medium text-black mt-2 ">tropwet</h3>
+                        <h3 class="font-medium text-black text-lg mt-2 "><strong>tropwet</strong></h3>
                         <p class="text-xs">he fucks the two girls and they cum in her mouth she eats the</p>
                         <div class="flex items-center mt-3 gap-x-2">
                             <iconify-icon icon="ri:women-line" class="text-lg text-gay"></iconify-icon>
